--- a/Arena/templates/index.html
+++ b/Arena/templates/index.html
@@ -4,30 +4,109 @@
     <meta charset="UTF-8">
     <title>Arena</title>
     <script type="text/javascript" src="{{ url_for('static', filename='jquery.js') }}"></script>
-    <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.min.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap-4.5.0/css/bootstrap.css')}}">
 </head>
 
 <body>
-    <h1>Pogona Pursuit</h1>
-    <button id="stream" class="btn btn-lg btn-primary">Stream</button>
-    <img id="stream_img" src="" width="640" height="480">
+
+<div class="row">
+    <div class="col">
+        <h1 class="p-2" style="font-size: 4em; text-align: center; margin-bottom: 1em">Pogona Pursuit</h1>
+        <div class="row">
+            <form class="col-md-6">
+                <h3>Record</h3>
+                <div class="form-group row">
+                    <label for="numOfFrames" class="col-sm-5 col-form-label">Number of Frames</label>
+                    <div class="col-sm-4">
+                        <input type="number" class="form-control" id="numOfFrames" value="{{num_frames}}">
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label for="exposure" class="col-sm-5 col-form-label">Exposure Time</label>
+                    <div class="col-sm-4">
+                        <input type="number" class="form-control" id="exposure" value="{{exposure}}">
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <div class="col-sm-4">Cameras</div>
+                    <div class="col-sm-4">
+                        {% for cam in cameras %}
+                        <div class="row">
+                            <input class="form-check-input" type="checkbox" id="{{cam}}" checked>
+                            <label class="form-check-label" for="{{cam}}">{{cam}}</label>
+                        </div>
+                        {% endfor %}
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <div class="col-sm-10">
+                        <button type="submit" class="btn btn-primary">Run</button>
+                    </div>
+                </div>
+            </form>
+            <div class="col-md-4">
+                <h3 style="text-align: center; margin-bottom: 1em">Events</h3>
+                <div class="row mb-2">
+                    <button id="init_bugs" class="btn btn-lg btn-primary mx-auto">Start Bugs</button>
+                </div>
+                <div class="row mb-2">
+                    <button id="hide_bugs" class="btn btn-lg btn-primary mx-auto">Hide Bugs</button>
+                </div>
+            </div>
+        </div>
+        <div class="row" id="record-output">
+
+        </div>
+    </div>
+
+    <div class="col">
+        <div class="row">
+            <img id="stream_img" src="{{ url_for('static', filename='video_placeholder.jpg') }}"
+                 width="640" height="420" class="mx-auto" style="z-index: 10">
+        </div>
+        <div class="row mt-4">
+            <button id="stream" class="btn btn-lg btn-primary mx-auto">Stream</button>
+        </div>
+    </div>
+
+    <div id="footer">
+        <img src="{{ url_for('static', filename='pogona_white_background.jpg') }}" alt="">
+        <h4>Written by Reggev Eyal</h4>
+    </div>
+</div>
+
 </body>
 
 <script>
-    $(function(){
-        var isTouchDevice = "ontouchstart" in document.documentElement ? true : false;
-        var BUTTON_DOWN   = isTouchDevice ? "touchstart" : "mousedown";
-        var BUTTON_UP     = isTouchDevice ? "touchend"   : "mouseup";
-
-        $("#stream").bind(BUTTON_DOWN,function(){
-          $("#stream_img").src("{{ url_for('video_feed') }}")
-        });
+  $(function () {
+    $("#stream").bind('click', function () {
+      $("#stream_img").attr("src", "{{ url_for('video_feed') }}")
     });
+    $("form").submit(function (event) {
+      $.post("/record", {
+        num_frames: Number($("#numOfFrames").val()),
+        exposure: Number($("#exposure").val()),
+        is_auto_start: true
+      }).done(function (result, status, xhr) {
+        $("#record-output").html(result)
+      }).fail(function (xhr, status, error) {
+          $("#message").html("Result: " + status + " " + error + " " + xhr.status + " " + xhr.statusText)
+        });
+    })
+  });
 </script>
 
 <style>
     body {
-        padding: 10px;
+        padding: 20px;
+    }
+
+    #footer {
+        position: fixed;
+        right: 0;
+        bottom: 0;
+        text-align: center;
+        padding: 1em;
     }
 </style>
 
