--- a/Arena/templates/index.html
+++ b/Arena/templates/index.html
@@ -54,7 +54,7 @@
                 </div>
             </div>
         </div>
-        <div class="row" id="record-output"></div>
+        <pre class="row" id="record-output"></pre>
     </div>
 
     <div class="col">
