arena ui acquire_stop number fix

--- a/Arena/templates/index.html
+++ b/Arena/templates/index.html
@@ -209,7 +209,7 @@
 
     function getAcquireStop() {
       let d = {};
-      d[$("#acquireStopSelect").val()] = $("#acquireStopValue").val();
+      d[$("#acquireStopSelect").val()] = Number($("#acquireStopValue").val());
       return d;
     }
   })
