--- a/Arena/templates/index.html
+++ b/Arena/templates/index.html
@@ -75,12 +75,8 @@
                 <div class="form-group row">
                     <div class="col">
                         <button type="submit" class="btn btn-primary mr-2">Run</button>
-                        <button id="stopRecord" type="button" class="btn btn-outline-danger">Stop Record</button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        <button id="camerasInfo" type="button" class="btn btn-primary">Cameras Info</button>
+                        <button id="stopRecord" type="button" class="btn btn-outline-danger mr-4">Stop Record</button>
+                        <button id="camerasInfo" type="button" class="btn btn-outline-info">Info</button>
                     </div>
                 </div>
             </form>
