--- a/Arena/templates/index.html
+++ b/Arena/templates/index.html
@@ -23,6 +23,12 @@
                     </div>
                 </div>
                 <div class="form-group row pr-3">
+                    <label for="animalId" class="col col-form-label">Pogona ID</label>
+                    <div class="col-sm-5">
+                        <input type="text" class="form-control" id="animalId" required>
+                    </div>
+                </div>
+                <div class="form-group row pr-3">
                     <label for="experimentNumTrials" class="col col-form-label">Number of Trials</label>
                     <div class="col-sm-5">
                         <input type="number" class="form-control" id="experimentNumTrials" required>
@@ -169,6 +175,7 @@
         type: "POST",
         data: JSON.stringify({
           name: $("#experimentName").val(),
+          animal_id: $("#animalId").val(),
           cameras: getCheckedCameras(),
           trial_duration: Number($("#experimentTrialDuration").val()),
           num_trials: Number($("#experimentNumTrials").val()),
