--- a/Arena/templates/index.html
+++ b/Arena/templates/index.html
@@ -46,6 +46,22 @@
                         <input type="number" class="form-control" id="experimentITI" required>
                     </div>
                 </div>
+                <div class="form-group row pr-3">
+                    <label for="bugTypeSelect" class="col col-form-label">Bug Type</label>
+                    <div class="col">
+                        <select id="bugTypeSelect" class="form-control col">
+                            <option value="cockroach">Cockroach</option>
+                            <option value="worm">Worm</option>
+                            <option value="vegetables">Vegetables</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="form-group row pr-3">
+                    <label for="bugSpeed" class="col col-form-label">Bug Speed:</label>
+                    <div class="col-sm-5">
+                        <input type="number" class="form-control" id="bugSpeed" required>
+                    </div>
+                </div>
                 <div class="row">
                     <div class="col">
                         <button type="submit" class="btn btn-primary mr-2">Start</button>
@@ -179,7 +195,9 @@
           cameras: getCheckedCameras(),
           trial_duration: Number($("#experimentTrialDuration").val()),
           num_trials: Number($("#experimentNumTrials").val()),
-          iti: Number($("#experimentITI").val())
+          iti: Number($("#experimentITI").val()),
+          bug_type: $("#bugTypeSelect").val(),
+          bug_speed: Number($("#bugSpeed").val())
         }),
         contentType: "application/json",
         beforeSend: function () {
