--- a/Arena/templates/index.html
+++ b/Arena/templates/index.html
@@ -37,29 +37,39 @@
                 <div class="form-group row pr-3">
                     <label for="experimentTrialDuration" class="col col-form-label">Trial Duration [sec]</label>
                     <div class="col-sm-5">
-                        <input type="number" class="form-control" id="experimentTrialDuration" required>
+                        <input type="number" class="form-control" id="experimentTrialDuration" value="90" required>
                     </div>
                 </div>
                 <div class="form-group row pr-3">
                     <label for="experimentITI" class="col col-form-label">Inter Trial Interval [sec]</label>
                     <div class="col-sm-5">
-                        <input type="number" class="form-control" id="experimentITI" required>
+                        <input type="number" class="form-control" id="experimentITI" value="300" required>
                     </div>
                 </div>
                 <div class="form-group row pr-3">
                     <label for="bugTypeSelect" class="col col-form-label">Bug Type</label>
                     <div class="col">
                         <select id="bugTypeSelect" class="form-control col">
-                            <option value="cockroach">Cockroach</option>
-                            <option value="worm">Worm</option>
-                            <option value="vegetables">Vegetables</option>
+                            {% for bugType in config.get('bugTypes', {}).keys() %}
+                            <option value="{{bugType}}">{{bugType}}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                </div>
+                <div class="form-group row pr-3">
+                    <label for="movementTypeSelect" class="col col-form-label">Movement Type</label>
+                    <div class="col">
+                        <select id="movementTypeSelect" class="form-control col">
+                            {% for movementType in config.get('movementTypes', []) %}
+                            <option value="{{movementType}}">{{movementType}}</option>
+                            {% endfor %}
                         </select>
                     </div>
                 </div>
                 <div class="form-group row pr-3">
                     <label for="bugSpeed" class="col col-form-label">Bug Speed:</label>
                     <div class="col-sm-5">
-                        <input type="number" class="form-control" id="bugSpeed" required>
+                        <input type="number" class="form-control" id="bugSpeed" value="2" required>
                     </div>
                 </div>
                 <div class="row">
@@ -197,7 +207,8 @@
           num_trials: Number($("#experimentNumTrials").val()),
           iti: Number($("#experimentITI").val()),
           bug_type: $("#bugTypeSelect").val(),
-          bug_speed: Number($("#bugSpeed").val())
+          bug_speed: Number($("#bugSpeed").val()),
+          movement_type: $("#movementTypeSelect").val()
         }),
         contentType: "application/json",
         beforeSend: function () {
