--- a/Arena/templates/index.html
+++ b/Arena/templates/index.html
@@ -72,6 +72,12 @@
                         <input type="number" class="form-control" id="bugSpeed" value="2" required>
                     </div>
                 </div>
+                <div class="form-group row pr-3">
+                    <label for="timeBetweenBugs" class="col col-form-label">Time Between Bugs [sec]:</label>
+                    <div class="col-sm-5">
+                        <input type="number" class="form-control" id="timeBetweenBugs" value="2" required>
+                    </div>
+                </div>
                 <div class="row">
                     <div class="col">
                         <button type="submit" class="btn btn-primary mr-2">Start</button>
@@ -210,10 +216,11 @@
           trial_duration: Number($("#experimentTrialDuration").val()),
           num_trials: Number($("#experimentNumTrials").val()),
           iti: Number($("#experimentITI").val()),
+          is_use_predictions: $("#use_predictions").is(":checked"),
           bug_type: $("#bugTypeSelect").val(),
           bug_speed: Number($("#bugSpeed").val()),
           movement_type: $("#movementTypeSelect").val(),
-          is_use_predictions: $("#use_predictions").is(":checked")
+          time_between_bugs: Number($("#timeBetweenBugs").val())
         }),
         contentType: "application/json",
         beforeSend: function () {
