--- a/Arena/templates/index.html
+++ b/Arena/templates/index.html
@@ -116,6 +116,12 @@
                                 <input type="number" class="form-control" id="exposure" value="{{exposure}}" required>
                             </div>
                         </div>
+                        <div class="form-group row">
+                            <label for="videoOutputPrefix" class="col col-form-label">Folder Prefix</label>
+                            <div class="col-sm-7">
+                                <input type="text" class="form-control" id="videoOutputPrefix">
+                            </div>
+                        </div>
                         <h7 class="label">Acquire Stop</h7>
                         <div class="form-group row">
                             <div class="col">
@@ -241,6 +247,7 @@
         type: "POST",
         data: JSON.stringify(Object.assign({
           exposure: Number($("#exposure").val()),
+          folder_prefix: $("#videoOutputPrefix").val(),
           cameras: getCheckedCameras(),
           is_auto_start: true,
           is_use_predictions: $("#use_predictions").is(":checked")
