--- a/Arena/templates/index.html
+++ b/Arena/templates/index.html
@@ -169,6 +169,12 @@
                 <div class="row mb-2">
                     <button id="reward" class="btn btn-lg btn-primary mx-auto">Reward</button>
                 </div>
+                <div class="row mb-2">
+                    <button id="led_light_on" class="btn btn-lg btn-primary mx-auto">LED Light ON</button>
+                </div>
+                <div class="row mb-2">
+                    <button id="led_light_off" class="btn btn-lg btn-primary mx-auto">LED Light OFF</button>
+                </div>
             </div>
         </div>
         <pre class="row" id="record-output"></pre>
@@ -316,6 +322,10 @@
       $.get('/reward', function (data) {
         $("#record-output").text(data)
       })
+    })
+
+    $("led_light_on").click(function (e) {
+        $.get('/led_light/on')
     })
 
     function getCheckedCameras() {
