--- a/Arena/templates/index.html
+++ b/Arena/templates/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8">
     <title>Arena</title>
     <script type="text/javascript" src="{{ url_for('static', filename='jquery.js') }}"></script>
+    <!--    <script type="text/javascript" src="{{ url_for('static', filename='popper.min.js') }}"></script>-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
+            integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
+            crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap-4.5.0/css/bootstrap.css')}}">
+    <script type="text/javascript"
+            src="{{ url_for('static', filename='Bootstrap-4-Multi-Select-BsMultiSelect/dist/js/BsMultiSelect.js') }}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -37,22 +44,30 @@
                 <div class="form-group row pr-3">
                     <label for="experimentTrialDuration" class="col col-form-label">Trial Duration [sec]</label>
                     <div class="col-sm-5">
-                        <input type="number" class="form-control" id="experimentTrialDuration" value="90" required>
+                        <input type="number" class="form-control" id="experimentTrialDuration" value="10" required>
                     </div>
                 </div>
                 <div class="form-group row pr-3">
                     <label for="experimentITI" class="col col-form-label">Inter Trial Interval [sec]</label>
                     <div class="col-sm-5">
-                        <input type="number" class="form-control" id="experimentITI" value="300" required>
+                        <input type="number" class="form-control" id="experimentITI" value="5" required>
                     </div>
                 </div>
                 <div class="form-group row pr-3">
                     <label for="bugTypeSelect" class="col col-form-label">Bug Type</label>
                     <div class="col">
-                        <select id="bugTypeSelect" class="form-control col">
+                        <select id="bugTypeSelect" class="form-control col" multiple="multiple" style="display: none;">
                             {% for bugType in config.get('bugTypes', {}).keys() %}
                             <option value="{{bugType}}">{{bugType}}</option>
                             {% endfor %}
+                        </select>
+                    </div>
+                </div>
+                <div class="form-group row pr-3" id="rewardBugDiv" style="display: none">
+                    <label for="rewardBugSelect" class="col col-form-label">Reward Bug</label>
+                    <div class="col">
+                        <select id="rewardBugSelect" class="form-control col" multiple="multiple"
+                                style="display: none;">
                         </select>
                     </div>
                 </div>
@@ -170,8 +185,8 @@
                     <button id="reward" class="btn btn-lg btn-primary mx-auto">Reward</button>
                 </div>
                 <div class="row mb-1" id="leds-div">
-                    <h4 class="col-sm-3 m-auto">LED:</h4>
-                    <div class="col-sm-3">
+                    <h4 class="col-sm-3 m-auto mr-3">LED:</h4>
+                    <div class="col-sm-3 mr-2">
                         <button id="led_light_on" class="btn btn-lg btn-primary">ON</button>
                     </div>
                     <div class="col-sm-3">
@@ -180,7 +195,7 @@
                 </div>
                 <div class="row mb-1" id="display-div">
                     <h4 class="col-sm-3 m-auto">Display:</h4>
-                    <div class="col-sm-3">
+                    <div class="col-sm-3 mr-2">
                         <button id="display_on" class="btn btn-lg btn-primary">ON</button>
                     </div>
                     <div class="col-sm-3">
@@ -221,6 +236,24 @@
 
 <script>
   $(function () {
+    let $bugTypeSelect = $("#bugTypeSelect")
+    let $rewardBugDiv = $("#rewardBugDiv")
+    $bugTypeSelect.bsMultiSelect()
+    $bugTypeSelect.change(function () {
+      $("#rewardBugSelect option").remove()
+      if (!$bugTypeSelect.val() || $bugTypeSelect.val().length <= 1) {
+        $rewardBugDiv.hide()
+      } else {
+        let $el = $("#rewardBugSelect")
+        $("#bugTypeSelect option").each(function () {
+          if (this.selected) {
+            $el.append($("<option></option>").attr("value", this.value).text(this.text)).attr('selected', true);
+          }
+        });
+        $el.bsMultiSelect("UpdateData")
+        $rewardBugDiv.show()
+      }
+    })
     $.get('/get_experiment', function (data) {
       $("#currentExperimentName").text(data)
     })
@@ -239,37 +272,42 @@
     });
     $("#stopExperiment").click(function () {
       $.get('/stop_experiment', function (data) {
-        $("#record-output").text(data);
+        appendOutput(data)
+        appendOutput('wait for trial to finish...')
         $.get('/get_experiment', function (data) {
-          $("#currentExperimentName").text(data)
+          appendOutput(data)
         });
       })
     });
     $("#experiment_form").submit(function (event) {
       event.preventDefault();
+      let bugTypes = $("#bugTypeSelect").val().join(',')
+      let rewardBugs = $("#rewardBugSelect").val()
+      let params = {
+        name: $("#experimentName").val(),
+        animal_id: $("#animalId").val(),
+        cameras: getCheckedCameras(),
+        trial_duration: Number($("#experimentTrialDuration").val()),
+        num_trials: Number($("#experimentNumTrials").val()),
+        iti: Number($("#experimentITI").val()),
+        reward_type: $("#rewardTypeSelect").val(),
+        is_use_predictions: $("#use_predictions").is(":checked"),
+        bug_types: bugTypes,
+        reward_bugs: rewardBugs ? rewardBugs.join(',') : bugTypes,
+        bug_speed: Number($("#bugSpeed").val()),
+        movement_type: $("#movementTypeSelect").val(),
+        time_between_bugs: Number($("#timeBetweenBugs").val())
+      }
       $.ajax({
         url: "/start_experiment",
         type: "POST",
-        data: JSON.stringify({
-          name: $("#experimentName").val(),
-          animal_id: $("#animalId").val(),
-          cameras: getCheckedCameras(),
-          trial_duration: Number($("#experimentTrialDuration").val()),
-          num_trials: Number($("#experimentNumTrials").val()),
-          iti: Number($("#experimentITI").val()),
-          reward_type: $("#rewardTypeSelect").val(),
-          is_use_predictions: $("#use_predictions").is(":checked"),
-          bug_type: $("#bugTypeSelect").val(),
-          bug_speed: Number($("#bugSpeed").val()),
-          movement_type: $("#movementTypeSelect").val(),
-          time_between_bugs: Number($("#timeBetweenBugs").val())
-        }),
+        data: JSON.stringify(params),
         contentType: "application/json",
         beforeSend: function () {
-          $("#record-output").text('initializing experiment...')
+          $("#record-output").text('>> initializing experiment...')
         },
-        complete: function (res) {
-          $("#record-output").text(res.responseText)
+        success: function (res) {
+          // $("#record-output").text(res.responseText)
           $.get('/get_experiment', function (data) {
             $("#currentExperimentName").text(data)
           });
@@ -323,31 +361,32 @@
         url: "/init_bugs",
         type: "POST",
         data: JSON.stringify({
-            numOfBugs: 1,
-            speed: Number($("#bugSpeed").val()),
-            bugType: $("#bugTypeSelect").val(),
-            movementType: $("#movementTypeSelect").val(),
-            timeBetweenBugs: Number($("#timeBetweenBugs").val())
+          numOfBugs: 1,
+          speed: Number($("#bugSpeed").val()),
+          bugTypes: $("#bugTypeSelect").val(),
+          rewardBugs: $("#rewardBugSelect").val() ? $("#rewardBugSelect").val() : $("#bugTypeSelect").val(),
+          movementType: $("#movementTypeSelect").val(),
+          timeBetweenBugs: Number($("#timeBetweenBugs").val()),
         }),
         contentType: "application/json",
         complete: function (res) {
-          $("#record-output").text('bugs initiated')
+          appendOutput('>> Bugs initiated manually')
         }
       })
     })
     $("#hide_bugs").click(function (e) {
       $.get('/hide_bugs')
+      appendOutput('>> Bugs stopped manually')
     })
     $("#calibrate").click(function (e) {
-      $("#record-output").text('Calibrating...')
       $.get('/calibrate', function (data) {
-        $("#record-output").text(data)
+        appendOutput(`>> Calibration: ${data}`)
       })
     })
 
     $("#reward").click(function (e) {
       $.get('/reward', function (data) {
-        $("#record-output").text(data)
+        appendOutput('>> Reward sent manually')
       })
     })
 
@@ -364,6 +403,38 @@
       $.get('/display/off')
     })
 
+    ////////////////////////////// MQTT ////////////////////////////////////
+    let client = new Paho.MQTT.Client(location.hostname, 9001, "clientId");
+    client.onConnectionLost = onConnectionLost;
+    client.onMessageArrived = onMessageArrived;
+    client.connect({onSuccess: onConnect});
+
+    function onConnect() {
+      client.subscribe("event/log/experiment");
+      client.subscribe("event/log/touch");
+    }
+
+    function onConnectionLost(responseObject) {
+      if (responseObject.errorCode !== 0) {
+        appendOutput("MQTT connection lost:" + responseObject.errorMessage);
+      }
+    }
+
+    function onMessageArrived(message) {
+      let msg = message.payloadString
+      if (message.destinationName === "event/log/touch") {
+        msg = JSON.parse(msg)
+        if (!msg['is_hit']) {
+          return
+        }
+        msg = `Hit recorded on ${msg['bug_type']} location: ${msg['x']},${msg['y']} ${msg['is_reward_bug'] ? '(reward bug)' : ''}`
+      }
+      appendOutput(msg)
+    }
+
+    ///////////////////////////////////////////////////////////////////////
+    // Functions
+
     function getCheckedCameras() {
       let a = []
       $("#cams-checkboxes input").each(function (e) {
@@ -378,6 +449,10 @@
       let d = {};
       d[$("#acquireStopSelect").val()] = Number($("#acquireStopValue").val());
       return d;
+    }
+
+    function appendOutput(msg) {
+      $("#record-output").append(document.createTextNode('\n' + msg))
     }
   })
 </script>
