--- a/Arena/templates/index.html
+++ b/Arena/templates/index.html
@@ -404,7 +404,7 @@
     })
 
     ////////////////////////////// MQTT ////////////////////////////////////
-    let client = new Paho.MQTT.Client("{{mqtt_host}}", 9001, "clientId");
+    let client = new Paho.MQTT.Client(location.hostname, 9001, "clientId");
     client.onConnectionLost = onConnectionLost;
     client.onMessageArrived = onMessageArrived;
     client.connect({onSuccess: onConnect});
